alcs-frontend/src/app/features/home/audit/audit-subtasks.component.scss
@use '../../../../styles/colors';

.assignee {
  margin: 18px 0;
}

.assigned-table {
  margin-top: 24px;
  margin-bottom: 48px;
  width: 100%;

  .paused {
    background-color: #efefef;
  }

  tr.no-data {
    border: none;
    background-color: colors.$grey-light;
    align-items: center;
    justify-content: center;
    cursor: auto;
    height: 32px;
  }
}

.high-priority {
  font-size: 1.4em;
  font-weight: bold;
  color: colors.$error-color;
}

.unassigned {
  font-style: italic;
  color: colors.$grey;
}

.subtask-assignee {
  .assignee-card-name {
    font-size: 1.2em !important;
    font-weight: 600 !important;
  }
  .assignee-card-email {
    font-size: 0.9em !important;
  }
}

.assignee-column {
  padding-right: 12px;
  min-width: 170px;
  overflow: inherit;

  .assignee-card-body {
    overflow: auto;
  }
}

:host::ng-deep .ng-select .ng-select-container {
  .ng-value-container .ng-input > input {
    margin: 0;
  }
}

